# opcua-analyser

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/api/plot/: graphics.md
docs/api/preprocessing/: file-handling.md  file_handling.md  operations.md
tests/: test_cli.py  test_file_handling.py  test_operations.py
tests/assets/: 0-dos_attack_example.csv  dos_attack_example.pcapng  example.pcapng
uanalyser/: main.py  paths.py
uanalyser/cli/: cli.py
uanalyser/plot/: graphics.py
uanalyser/preprocessing/: file-handling.py  file_handling.py  operations.py
